# ethnomusicology

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md
.claude/: settings.json
.design-crit/: brief.md  crit-session.md  decisions.md  design-tokens.json  direction.html  overview.html  state.json
backend/: Cargo.toml  ethnomusicology.db.bak
backend/migrations/: 001_initial_schema.sql  002_spotify_imports.sql  003_dj_metadata.sql  004_setlists.sql  005_enrichment.sql  006_import_tracks.sql  007_deezer_preview.sql  008_setlist_versions.sql  009_verification.sql  010_setlist_names.sql  011_crates.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  repo.rs
backend/src/api/: claude.rs  mod.rs  retry.rs  spotify.rs
backend/src/db/: artists.rs  crate_models.rs  crates.rs  imports.rs  mod.rs  models.rs  refinement.rs  setlists.rs  tokens.rs  tracks.rs
backend/src/prompts/: music_skill.md  verification_prompt.md
backend/src/routes/: admin.rs  audio.rs  auth.rs  crates.rs  dev.rs  enrich.rs  import.rs  mod.rs  purchase_links.rs  refinement.rs  setlist.rs  tracks.rs
backend/src/services/: arrangement.rs  camelot.rs  deezer.rs  enrichment.rs  import.rs  match_scoring.rs  mod.rs  musicbrainz.rs  purchase_links.rs  quick_commands.rs  refinement.rs  setlist.rs  soundcloud.rs
backend/tests/: bootstrap_migrations.rs  refinement_api_test.rs  setlist_api_test.rs  tracks_api_test.rs  verification_integration.rs
deploy/: Caddyfile  ethnomusicology-frontend.service
docs/: claude-code-best-practices.md  executive-summary-dev-process.md  mvp-progress.md  mvp-roadmap.md  (+6 more)
(+307 files in other folders)
