[package]
name = "ethnomusicology-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
rspotify = { version = "0.15", features = ["client-reqwest", "reqwest-rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
axum-test = "16"
tokio-test = "0.4"
tempfile = "3"
